# statusdeploy

./: .gitignore  .gitmodules  Dockerfile  README.md  scripts.json
deploy/: .gitignore  main.py  pyproject.toml  remote.py
deploy/deployment/: .env  deploy.sh  docker-compose.yml
deployment/: deploy.sh  docker-compose.yml
resources/: dev_config.yaml  server_config.yaml
sd/: .dockerignore  app.tsx  entrypoint.sh  import_map.json  index.html  index.js  index.ts  style.css
sd/_aleph/: app.bundle.94ce4ce9.js  main.bundle.7ca5d8a9.js
sd/_aleph/pages/: index.bundle.68d55c97.js
sd/api/deploy/: [runJobs].ts  commit.ts  index.ts  runs.ts
sd/api/status/: [server].ts
sd/components/: deployContent.tsx  deployable.tsx  filler.tsx  footer.tsx  sdTabs.tsx  status.tsx  statusContent.tsx  tabs.tsx
sd/lib/: alive.ts  branchInfo.ts  jobsInfo.ts  openTab.ts  runInfo.ts
sd/pages/: index.tsx
sd/style/: deployable.css  footer.css  index-styles.css  index.css  page.css  standard.css
src/: deps.ts  main.ts
tideploy/: deployment.yml  pyproject.toml
tideploy/deployment/: .env  deploy.sh
