[tool.poetry]
name = "deploy"
version = "0.1.0"
description = "Remote deployment using Fabric"
authors = ["Tip ten Brink <75669206+tiptenbrink@users.noreply.github.com>"]
license = "Apache-2"

[tool.poetry.dependencies]
python = "^3.9"
fabric = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
